--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Project documentation about the Unparallel Weather Station">
   <meta name="author" content="Unparallel Innovation, Lda">
-  <link rel="canonical" href="http://10.0.1.55:8000/dev-corner/">
+  <link rel="canonical" href="https://unparallel-innovation.github.io/WeatherStation-Documentation/">
   <link rel="shortcut icon" href="img/weather_station_favicon2x.png">
   
   <title>Unparallel Weather Station</title>
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Home";
     var mkdocs_page_input_path = "index.md";
-    var mkdocs_page_url = "/dev-corner/";
+    var mkdocs_page_url = "/WeatherStation-Documentation/";
   </script>
   
   <script src="js/jquery-2.1.1.min.js" defer></script>
@@ -40,7 +40,7 @@
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
 
-                                <a href="http://10.0.1.55:8000/dev-corner/"><img class="top-image" src="/dev-corner/logo_weather_station@3x.png"  /a>
+                                <a href="https://unparallel-innovation.github.io/WeatherStation-Documentation/"><img class="top-image" src="/dev-corner/logo_weather_station@3x.png"  /a>
                               </a>
         <div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
@@ -239,5 +239,5 @@ The weather station uses an external sensor (AM2315) for reading temperature and
 
 <!--
 MkDocs version : 1.2.3
-Build Date UTC : 2021-12-16 17:44:35.598776+00:00
+Build Date UTC : 2021-12-16 17:56:45.980903+00:00
 -->
