--- a/site/BoardSpecs/Board_Specs/index.html
+++ b/site/BoardSpecs/Board_Specs/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <meta name="author" content="Unparallel Innovation, Lda">
-  <link rel="canonical" href="http://10.0.1.55:8000/dev-corner/BoardSpecs/Board_Specs/">
+  <link rel="canonical" href="https://unparallel-innovation.github.io/WeatherStation-Documentation/BoardSpecs/Board_Specs/">
   <link rel="shortcut icon" href="../../img/weather_station_favicon2x.png">
   
   <title>Board Ports - Unparallel Weather Station</title>
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Board Ports";
     var mkdocs_page_input_path = "BoardSpecs/Board_Specs.md";
-    var mkdocs_page_url = "/dev-corner/BoardSpecs/Board_Specs/";
+    var mkdocs_page_url = "/WeatherStation-Documentation/BoardSpecs/Board_Specs/";
   </script>
   
   <script src="../../js/jquery-2.1.1.min.js" defer></script>
@@ -40,7 +40,7 @@
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
 
-                                <a href="http://10.0.1.55:8000/dev-corner/"><img class="top-image" src="/dev-corner/logo_weather_station@3x.png"  /a>
+                                <a href="https://unparallel-innovation.github.io/WeatherStation-Documentation/"><img class="top-image" src="/dev-corner/logo_weather_station@3x.png"  /a>
                               </a>
         <div role="search">
   <form id ="rtd-search-form" class="wy-form" action="../../search.html" method="get">
