--- a/site/search.html
+++ b/site/search.html
@@ -33,7 +33,7 @@
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
 
-                                <a href="http://10.0.1.55:8000/dev-corner/"><img class="top-image" src="/dev-corner/logo_weather_station@3x.png"  /a>
+                                <a href="https://unparallel-innovation.github.io/WeatherStation-Documentation/"><img class="top-image" src="/dev-corner/logo_weather_station@3x.png"  /a>
                               </a>
         <div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
